fix overflowing / scrolling

--- a/src/components/pages/Work.scss
+++ b/src/components/pages/Work.scss
@@ -67,6 +67,8 @@ $header-height: 60px;
 }
 
 .work {
+  height: 100%;
+  max-height: 100%;
   background-color: #fff;
   display: flex;
   flex-direction: row;
